# stock-screener

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker_commands.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/: README.md
.github/workflows/: ci.yml  code-quality.yml  docker.yml
src/: __init__.py  main.py
src/gateways/: __init__.py  stock_data_gateway.py
src/models/: __init__.py  screening_result.py  signals.py  stock.py
src/services/: screener_service.py  signal_detection_service.py  technical_analysis_service.py
src/utils/: __init__.py  display.py  logging_config.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_complete_screening.py  test_signal_accuracy.py
tests/unit/: test_signal_detection_service.py  test_technical_analysis_service.py
tests/utils/: fixtures.py  test_data_generator.py
tests/utils/tests/data/: false_breakout.csv  ma_breakout.csv  no_signal.csv  resistance_breakout.csv  volume_spike.csv
